--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,13 @@
 <nav class="flex flex-wrap items-center justify-between px-4 py-2 bg-white border-b border-gray-200 text-sm font-medium" data-controller="toggle">
-  <div class="flex items-center flex-shrink-0 mr-6">
+  <div class="flex items-center flex-shrink-0 m-auto md:mr-6">
     <%= link_to root_path do %>
-      <%= image_tag "logo.png", class: "h-8 w-auto fill-current text-gray-700 hover:text-gray-800" %>
+      <%= image_tag "logo.png", class: "md:0 h-8 w-auto fill-current text-gray-700 hover:text-gray-800" %>
       <span class="sr-only"><%= Jumpstart.config.application_name %></span>
     <% end %>
   </div>
 
-  <div class="block lg:hidden">
-    <button type="button" id="sidebar-open" class="flex items-center p-3 text-gray-500 lg:hidden focus:outline-none focus:text-gray-700" data-action="click->toggle#toggle touch->toggle#toggle">
+  <div class="block lg:hidden" data-controller="menu">
+    <button type="button" id="navbar-open" class="flex items-center p-3 text-gray-500 lg:hidden focus:outline-none focus:text-gray-700" data-action="click->toggle#toggle touch->toggle#toggle click->menu#hideSidebarChevron">
       <svg class="w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path></svg>
     </button>
   </div>
