Fix sortable columns, Ref numb text wrap, & status pill colors

--- a/app/views/interpreters/_appointments.html.erb
+++ b/app/views/interpreters/_appointments.html.erb
@@ -1,7 +1,7 @@
 <table class="min-w-full divide-y divide-gray-300 mt-8">
   <thead class="bg-gray-50">
     <tr>
-      <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @appointments, :id, "Ref Numb" %></th>
+      <th scope="col" class="whitespace-nowrap py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @appointments, :id, "Ref Numb" %></th>
       <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @appointments, :modality, "Modality" %></th>
       <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @appointments, :language, "Language" %></th>
       <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @appointments, :duration, "Duration" %></th>
