--- a/app/views/appointments/_appointment.html.erb
+++ b/app/views/appointments/_appointment.html.erb
@@ -10,7 +10,7 @@
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0 w-full xl:w-1/3 lg:w-2/3">
           <%= select_tag("appointmentStatusDropdown", options_for_select(@appt_statuses.map{ |k, v| [k.capitalize, v] }), { prompt:"Change Status", style: "display: none;" }) %>
           <span id="appointmentStatus" data-action="click->appointments#handleStatusEditableBehaviour">
-            <span class="inline-block p-2 -mx-2 hover:bg-gray-100 cursor-pointer" id="wrappedSpanElementForStatus" title="Click to edit status"><%= colored_appointment_status appointment.status.titleize %></span>
+            <span><%= colored_appointment_status appointment.status.titleize %></span>
           </span>
         </dd>
       </div>
