--- a/app/views/appointments/_appointments.html.erb
+++ b/app/views/appointments/_appointments.html.erb
@@ -2,7 +2,7 @@
   <table class="min-w-full divide-y divide-gray-300">
     <thead class="bg-gray-50">
       <tr>
-        <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @appointments, :id, "Ref Numb" %></th>
+        <th scope="col" class="whitespace-nowrap py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @appointments, :id, "Ref Numb" %></th>
         <% if AppointmentPolicy.new(current_account, @appointment, current_account_user).show_appointment_customers? %>
           <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">
             <%= sortable @appointments, :customer_id, "Customer" %>
